<resources>
    <string name="app_name">MaterialDesign</string>

    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="favourite">favourite</string>
    <string name="settings">settings</string>
    <string name="search">Search</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="descriptions">Descriptions</string>
    <string name="today">today</string>
    <string name="yesterday">Yesterday</string>
    <string name="before_yesterday">BeforeYesterday</string>
    <string name="options">Options</string>
    <string name="dark_theme">DarkTheme</string>
    <string name="light_theme">LightTheme</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="earth">Earth</string>
    <string name="system">System</string>
    <string name="mars">Mars</string>
    <string name="pictureDay">PictureDay</string>
    <string name="planet">Planet</string>
    <string name="coordinator">Coordinator</string>
    <string name="animation">Animation</string>
    <string name="welcome_to_app_nasa">Welcome to App NASA</string>
    <string name="home">Home</string>
    <string name="picture_of_the_day">Picture Of the day</string>
    <string name="calendar">Calendar</string>
    <string name="info">Info</string>
    <string name="setting">Setting</string>
    <string name="random">Random</string>
    <string name="recycler">Recycler</string>
    <string name="list_notes">Список заметок</string>
    <string name="header">#Header</string>
    <string name="tools">Поешь этих францкзких булок</string>
    <string name="edit">Edit</string>
    <string name="create_notes">Create Notes</string>
    <string name="apply">Apply</string>
    <string name="description">Description</string>
    <string name="click_for_start_animation">Click for start animation</string>
</resources>