<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_picture"
        android:icon="@drawable/picture"
        android:title="@string/pictureDay" />
    <item
        android:id="@+id/navigation_planet"
        android:icon="@drawable/planet"
        android:title="@string/planet" />
    <item
        android:id="@+id/recycler"
        android:icon="@drawable/ic_hamburger_menu_bottom_bar"
        android:title="@string/recycler" />
    <item
        android:id="@+id/navigation_coordinator"
        android:icon="@drawable/ic_telescope"
        android:title="@string/coordinator" />
</menu>